Agregue Descripcion personal

--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 </head>
 <body>
     <h1>Brandon Arnoldo Alvarado Monge</h1>
+    <p>
+        Me gusta programar y aprender cosas nuevas, me gusta la tecnologia y la musica, 
+        me gusta el futbol, me gusta la comida y la bebida, me gusta la naturaleza y la ciencia.
+    </p>
 </body>
 </html>
