--- a/index.html
+++ b/index.html
@@ -12,5 +12,9 @@
         Me gusta programar y aprender cosas nuevas, me gusta la tecnologia y la musica, 
         me gusta el futbol, me gusta la comida y la bebida, me gusta la naturaleza y la ciencia.
     </p>
+    <p>
+        Me gustan los videojuegos, me gustan los animales, 
+        me gustan los deportes, me gustan los videojuegos,
+    </p>
 </body>
 </html>
